--- a/package.json
+++ b/package.json
@@ -17,18 +17,22 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.13",
     "esbuild": "^0.14.24",
-    "miniflare": "2.2.0",
+    "miniflare": "^2.14.2",
     "npm-run-all": "^4.1.5",
     "tailwindcss": "^2.2.16",
     "typescript": "^4.6.2"
   },
   "dependencies": {
     "bootstrap": "5.1.3",
+    "crypto": "^1.0.1",
     "dom-parser": "^0.1.6",
-    "hono": "^0.5.1",
+    "hono": "^4.0.3",
     "html-entities": "^2.3.2",
+    "path": "^0.12.7",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "sodium-plus": "^0.9.0",
+    "worker-gist": "^0.1.3"
   }
 }
