--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
   },
   "dependencies": {
     "bootstrap": "5.1.3",
+    "clonedeep": "^2.0.0",
     "crypto": "^1.0.1",
     "dom-parser": "^0.1.6",
     "hono": "^4.0.3",
     "html-entities": "^2.3.2",
+    "lodash": "^4.17.21",
     "path": "^0.12.7",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
